<resources>
    <string name="app_name">Calculator</string>
    <string name="Calculator">My Calculator</string>
    <string name="tvNumber">Number</string>
    <string name="etFirst">Enter The First No.</string>
    <string name="etSecond">Enter The second No.</string>
    <string name="btnAdd">+</string>
    <string name="btnMin">-</string>
    <string name="btnDiv">/</string>
    <string name="btnMul">*</string>
    <string name="btnReset">Reset</string>
</resources>