<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/yellow"
    >
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/etFirst"
        android:id="@+id/etFirst"
        android:textColorHint="@color/blue"
        android:textSize="30sp"
        android:layout_marginVertical="40dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif-black"
        android:inputType="numberDecimal"
        android:textColor="@color/blue"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/etSecond"
        android:id="@+id/etSecond"
        android:textColor="@color/blue"
        android:textColorHint="@color/blue"
        android:textSize="30sp"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etFirst"
        android:fontFamily="sans-serif-black"
        android:inputType="numberDecimal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvNumber"
        android:id="@+id/tvNumber"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/etSecond"
        android:textSize="40sp"
        android:textColor="@color/blue"
        android:fontFamily="sans-serif-black"  />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAdd"
        android:hint="@string/btnAdd"
        android:textSize="30sp"
        android:textColorHint="@color/yellow"
        android:backgroundTint="@color/blue"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="55dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMin"
        android:hint="@string/btnMin"
        android:textSize="30sp"
        android:textColorHint="@color/yellow"
        android:backgroundTint="@color/blue"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="50dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="55dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnMul"
        android:hint="@string/btnMul"
        android:textSize="30sp"
        android:textColorHint="@color/yellow"
        android:backgroundTint="@color/blue"
        android:layout_below="@id/btnAdd"
        android:layout_marginVertical="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginHorizontal="50dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="55dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnDiv"
        android:hint="@string/btnDiv"
        android:textSize="30sp"
        android:textColorHint="@color/yellow"
        android:backgroundTint="@color/blue"
        android:layout_below="@id/btnMin"
        android:layout_marginHorizontal="50dp"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_marginVertical="50dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="55dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnReset"
        android:hint="@string/btnReset"
        android:textSize="30sp"
        android:textColorHint="@color/yellow"
        android:backgroundTint="@color/blue"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvNumber"
        android:layout_marginTop="270dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="55dp" />


</RelativeLayout>